--- a/projects/angular/src/layout/tabs/_tabs.clarity.scss
+++ b/projects/angular/src/layout/tabs/_tabs.clarity.scss
@@ -100,6 +100,7 @@
 
         &.btn {
           margin-bottom: tokens.$cds-global-space-1;
+          justify-content: start;
         }
 
         &.active,
