update padding in nav-item

--- a/projects/angular/src/layout/nav/_nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_nav.clarity.scss
@@ -25,6 +25,7 @@
 
     .nav-item {
       display: inline-block;
+      padding: density.$clr-base-layout-space-xs;
 
       &.active > .nav-link {
         color: tabs-variables.$clr-nav-link-active-color;
