fix(modal): modal not closing on backdrop click

--- a/projects/angular/src/modal/_modal.clarity.scss
+++ b/projects/angular/src/modal/_modal.clarity.scss
@@ -65,10 +65,9 @@
 
   .modal {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: map.get(variables.$clr-layers, modal);
     display: flex;
     flex-direction: column;
