--- a/projects/angular/src/forms/styles/_file-input.clarity.scss
+++ b/projects/angular/src/forms/styles/_file-input.clarity.scss
@@ -11,6 +11,7 @@
 
 @use '../../utils/mixins';
 @use '../../utils/variables/variables';
+@use '../../layout/density' as density;
 @use 'variables.forms' as forms-variables;
 
 @include mixins.exports('forms.file-input') {
@@ -18,6 +19,7 @@
     display: flex;
     position: relative;
     margin-top: tokens.$cds-global-space-3;
+    gap: density.$clr-base-gap-xs;
 
     .clr-file-input {
       @include mixins.equilateral(0);
@@ -30,15 +32,14 @@
     .clr-file-input-browse-button,
     .clr-file-input-clear-button {
       margin: 0;
-      margin-right: tokens.$cds-global-space-2;
     }
 
     .clr-file-input-clear-button {
-      padding: 0 tokens.$cds-global-space-2 !important;
+      padding: 0;
       min-width: unset;
       border: 0;
       cds-icon {
-        @include mixins.equilateral(tokens.$cds-global-space-9);
+        @include mixins.equilateral(density.$clr-base-icon-size-l);
       }
     }
 
@@ -59,9 +60,13 @@
   }
 
   .clr-file-list {
+    display: flex;
+    flex-direction: column;
+    gap: density.$clr-base-vertical-offset-m;
+    margin-top: density.$clr-base-vertical-offset-m;
+
     .clr-file-list-item {
-      margin-top: tokens.$cds-global-space-5;
-      max-width: 500px;
+      max-width: mixins.baselinePx(500);
     }
 
     .clr-file-label-and-status-icon {
@@ -71,14 +76,17 @@
 
     .clr-file-label {
       white-space: wrap;
-      margin-right: tokens.$cds-global-space-2;
+      padding-right: density.$clr-base-horizontal-offset-xs;
+
+      .text {
+        padding: density.$clr-base-vertical-offset-xs 0;
+      }
     }
 
     .clr-file-clear-button {
       margin: 0;
       padding: 0;
-      min-width: tokens.$cds-global-space-7;
-      height: tokens.$cds-alias-typography-caption-line-height; // match label text line height
+      @include mixins.min-equilateral(density.$clr-base-icon-size-s);
 
       cds-icon {
         margin: 0;
