--- a/projects/angular/src/accordion/_properties.accordion.scss
+++ b/projects/angular/src/accordion/_properties.accordion.scss
@@ -21,7 +21,7 @@
     --clr-accordion-active-background-color: #{tokens.$cds-alias-object-interaction-background-selected};
     --clr-accordion-content-background-color: #{tokens.$cds-alias-object-container-background};
     --clr-accordion-content-color: #{tokens.$cds-alias-typography-color-450};
-    --clr-accordion-content-font-size: #{tokens.$cds-alias-typography-secondary-font-size};
+    --clr-accordion-content-font-size: #{density.$clr-base-typography-font-size-inline};
 
     --clr-accordion-header-background-color: #{tokens.$cds-alias-object-container-background};
     --clr-accordion-header-disabled-background-color: #{tokens.$cds-alias-object-container-background};
