--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -64,6 +64,8 @@
   .clr-control-label {
     display: block;
     color: forms-variables.$clr-forms-label-color;
+    padding: density.$clr-base-vertical-offset-xs 0;
+
     @include mixins.generate-typography-token(
       'SECONDARY-13-SB-CPT',
       (
@@ -73,7 +75,9 @@
   }
 
   .clr-control-container {
-    display: inline-block;
+    display: inline-flex;
+    gap: density.$clr-base-gap-xs;
+    flex-direction: column;
     @include mixins.generate-typography-token('SECONDARY-13-RG-EXP');
   }
 
@@ -85,7 +89,6 @@
     display: block;
     @include mixins.generate-typography-token('CAPTION-LG-11');
     color: forms-variables.$clr-forms-subtext-color;
-    margin-top: density.$clr-base-gap-xs;
 
     &.error {
       color: forms-variables.$clr-forms-invalid-text-color;
@@ -99,6 +102,7 @@
   .clr-subtext-wrapper {
     flex-basis: 100%;
     display: flex;
+    align-items: center;
   }
 
   .clr-validate-icon {
@@ -158,10 +162,6 @@
       min-width: auto;
     }
 
-    .clr-control-label {
-      margin-top: density.$clr-base-gap-xs;
-    }
-
     .clr-form-control {
       display: flex;
       flex-direction: row;
@@ -171,20 +171,24 @@
     .clr-control-container {
       display: flex;
       flex-wrap: wrap;
+      flex-direction: row;
+      align-items: center;
     }
 
     .clr-subtext {
       display: inline-block;
+      align-self: flex-start;
+      padding: density.$clr-base-vertical-offset-xs 0;
 
       // special margin left based on --clr-forms-icon-size
       // to align subtexts when error/success icon is missing.
-      margin-left: calc(#{tokens.$cds-global-space-3} + #{forms-variables.$clr-forms-icon-size});
+      margin-left: forms-variables.$clr-forms-icon-size;
     }
 
     .clr-error,
     .clr-success {
       .clr-subtext {
-        margin-left: tokens.$cds-global-space-3;
+        margin-left: 0;
 
         &.error,
         &.success {
