--- a/projects/angular/src/forms/styles/_form.clarity.scss
+++ b/projects/angular/src/forms/styles/_form.clarity.scss
@@ -6,6 +6,7 @@
  */
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density';
 @use 'variables.forms' as forms-variables;
 
 @include mixins.exports('forms.wrappers') {
@@ -72,14 +73,12 @@
     padding: forms-variables.$clr-forms-baseline;
   }
 
-  .clr-required-mark {
-    &::after {
-      content: '*';
-      color: forms-variables.$clr-forms-invalid-color;
-      fill: forms-variables.$clr-forms-invalid-color;
+  .clr-required-mark::after {
+    content: '*';
+    color: forms-variables.$clr-forms-invalid-color;
+    fill: forms-variables.$clr-forms-invalid-color;
 
-      font-size: tokens.$cds-alias-typography-font-size-3;
-      margin-left: forms-variables.$clr-forms-baseline;
-    }
+    // using margin as gap
+    margin-left: density.$clr-base-gap-xs;
   }
 }
