--- a/projects/angular/src/forms/styles/_toggles.clarity.scss
+++ b/projects/angular/src/forms/styles/_toggles.clarity.scss
@@ -171,7 +171,7 @@
     .clr-control-label {
       display: block;
       @include mixins.generate-typography-token('SECONDARY-13-RG-CPT');
-      padding-left: density.$clr-base-horizontal-offset-m;
+      padding: 0 0 0 density.$clr-base-horizontal-offset-m;
       margin-top: 0;
     }
   }
