--- a/projects/angular/src/layout/nav/_variables.subnav.scss
+++ b/projects/angular/src/layout/nav/_variables.subnav.scss
@@ -6,6 +6,7 @@
  */
 @use '../../utils/variables/variables';
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density/' as density;
 
 // Usage: ../layout/nav/_subnav.clarity.scss
 // TODO: would be nice to key text color in subnav off of the bgColor...
@@ -13,7 +14,7 @@ $clr-subnav-bgColor: var(--clr-subnav-bg-color) !default;
 
 // Usage: ../layout/nav/_subnav.clarity.scss
 // Usage: ../layout/nav/_nav.clarity.scss
-$clr-subnav-height: tokens.$cds-global-space-11 !default;
+$clr-subnav-height: density.$clr-base-layout-space-xl !default;
 
 // Usage: ../layout/nav/_subnav.clarity.scss
 $clr-nav-shadow: 0 calc(-1 * tokens.$cds-alias-object-border-width-100) 0 var(--clr-nav-box-shadow-color) inset !default;
