--- a/projects/angular/src/layout/tabs/_tabs.clarity.scss
+++ b/projects/angular/src/layout/tabs/_tabs.clarity.scss
@@ -8,6 +8,7 @@
 @use '../../utils/mixins';
 @use 'variables.tabs' as tabs-variables;
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density/' as density;
 @include meta.load-css('properties.tabs');
 
 // TODO: Fix this typo
@@ -47,7 +48,7 @@
     position: relative;
 
     .dropdown-menu {
-      padding: tokens.$cds-global-space-0;
+      padding: density.$clr-base-offset-0;
       box-shadow: tokens.$cds-alias-object-shadow-100;
       overflow: hidden;
     }
