--- a/projects/angular/src/layout/nav/_nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_nav.clarity.scss
@@ -14,6 +14,7 @@
 @include mixins.exports('nav.clarity') {
   .nav {
     display: flex; //For the elements inside the nav
+    height: density.$clr-base-layout-space-xl;
     list-style-type: none;
     align-items: center;
     margin: 0;
