--- a/projects/angular/src/forms/styles/_toggles.clarity.scss
+++ b/projects/angular/src/forms/styles/_toggles.clarity.scss
@@ -30,7 +30,7 @@
     position: relative;
     display: flex;
     align-items: flex-start;
-    margin-right: tokens.$cds-global-space-6;
+    margin-right: density.$clr-base-gap-m;
     min-height: toggle-variables.$clr-toggle-height;
     justify-content: start;
     padding: density.$clr-base-vertical-offset-multi-row-inline-s 0;
