--- a/projects/angular/src/modal/_properties.modal.scss
+++ b/projects/angular/src/modal/_properties.modal.scss
@@ -8,12 +8,13 @@
 @use '../utils/mixins';
 @use '../utils/variables/variables';
 @use './variables.modal' as modal-variables;
+@use '../layout/density';
 
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('modal.properties') {
   :root [cds-theme] {
-    --clr-modal-border-radius: #{tokens.$cds-alias-object-border-radius-100};
+    --clr-modal-border-radius: #{density.$clr-base-border-radius-s};
 
     // color
     --clr-modal-close-color: var(--clr-close-color);
@@ -29,10 +30,10 @@
 
     // title
     --clr-modal-title-color: #{tokens.$cds-alias-typography-color-400};
-    --clr-modal-title-font-size: #{tokens.$cds-alias-typography-section-font-size};
+    --clr-modal-title-font-size: #{density.$clr-base-typography-font-size-section};
     --clr-modal-title-font-family: #{variables.$clr-font}; // #{tokens.$cds-alias-typography-header-font-family};
     --clr-modal-title-font-weight: #{tokens.$cds-alias-typography-section-font-weight};
-    --clr-modal-title-line-height: #{tokens.$cds-alias-typography-section-line-height};
-    --clr-modal-title-letter-spacing: #{tokens.$cds-alias-typography-section-letter-spacing};
+    --clr-modal-title-line-height: #{density.$clr-base-typography-line-height-24};
+    --clr-modal-title-letter-spacing: #{mixins.baselinePx(-0.2)};
   }
 }
