--- a/projects/angular/src/wizard/_properties.wizard.scss
+++ b/projects/angular/src/wizard/_properties.wizard.scss
@@ -6,16 +6,11 @@
  */
 @use '../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
+@use '../layout/density';
 
 @include mixins.exports('wizard.properties') {
   :root [cds-theme] {
-    //--clr-wizard-title-font-size: #{modal-variables.$clr-modal-title-font-size};
-    //--clr-wizard-title-line-height: #{modal-variables.$clr-modal-title-line-height};
-    //--clr-wizard-stepnav-link-font-size: #{tokens.$cds-global-typography-font-size-4}; // keep
-    //--clr-wizard-stepnav-link-line-height: #{mixins.baselinePx(20)}; // keep
-
-    --clr-wizard-default-space: #{tokens.$cds-global-space-9};
-    --clr-wizard-footer-vertical-space: #{tokens.$cds-global-space-7};
+    --clr-wizard-footer-vertical-space: #{density.$clr-base-vertical-offset-xl};
 
     --clr-wizard-main-bgcolor: #{tokens.$cds-alias-object-overlay-background};
     --clr-wizard-main-text-color: #{tokens.$cds-alias-typography-color-400};
@@ -28,7 +23,7 @@
     --clr-wizard-stepnav-text--active: #{tokens.$cds-alias-object-interaction-color-selected};
     --clr-wizard-stepnav-text-disabled: #{tokens.$cds-alias-typography-disabled};
     --clr-wizard-stepnav-item-border-color: #{tokens.$cds-alias-status-neutral-tint};
-    --clr-wizard-stepnav-border-size: #{tokens.$cds-global-space-3};
+    --clr-wizard-stepnav-border-size: #{density.$clr-base-layout-space-2xs};
     // @TODO v18 rename to --clr-wizard-stepnav-item-complete-border-color
     --clr-wizard-stepnav-item-border-color--active: #{tokens.$cds-alias-status-success};
     --clr-wizard-stepnav-selected-border-color: #{tokens.$cds-alias-object-interaction-background-highlight};
@@ -54,7 +49,7 @@
     --clr-wizard-header-action-color: #{tokens.$cds-alias-object-interaction-color};
     --clr-wizard-header-action-color--hovered: #{tokens.$cds-alias-object-interaction-color-hover};
     --clr-wizard-box-shadow: #{tokens.$cds-alias-object-shadow-300};
-    --clr-wizard-border-radius: #{tokens.$cds-alias-object-border-radius-100};
+    --clr-wizard-border-radius: #{density.$clr-base-border-radius-s};
 
     --clr-wizard-content-background-color: #{tokens.$cds-alias-object-container-background};
   }
