--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -266,7 +266,7 @@
 
       .clr-wizard-stepnav-link-icon,
       .clr-wizard-stepnav-link-page-number {
-        @include mixins.min-equilateral(density.$clr-base-icon-size-s);
+        min-width: density.$clr-base-icon-size-s;
       }
     }
 
