add height that was removed

--- a/projects/angular/src/layout/nav/_subnav.clarity.scss
+++ b/projects/angular/src/layout/nav/_subnav.clarity.scss
@@ -27,6 +27,7 @@
     justify-content: space-between; //nav to the first and aside to the very right
     align-items: center;
     background-color: subnav-variables.$clr-subnav-bgColor;
+    height: subnav-variables.$clr-subnav-height;
 
     .nav {
       flex: 1 1 auto;
