--- a/projects/angular/src/layout/_properties.card.scss
+++ b/projects/angular/src/layout/_properties.card.scss
@@ -7,6 +7,7 @@
 @use '../utils/mixins';
 @use '../utils/variables/variables';
 @use './variables.card' as card-variables;
+@use '../layout/density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('card.properties') {
@@ -16,7 +17,7 @@
     --clr-card-divider-color: #{tokens.$cds-alias-object-border-color};
     --clr-card-title-color: #{tokens.$cds-alias-typography-color-400};
     --clr-card-title-font-weight: #{tokens.$cds-global-typography-section-font-weight};
-    --clr-card-border-radius: #{tokens.$cds-alias-object-border-radius-100};
+    --clr-card-border-radius: #{density.$clr-base-border-radius-s};
     --clr-card-border-width: #{tokens.$cds-alias-object-border-width-100};
     --clr-card-border-color: #{tokens.$cds-alias-object-border-color};
     --clr-card-box-shadow: #{tokens.$cds-alias-object-shadow-300};
