--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -268,6 +268,10 @@
       .clr-wizard-stepnav-link-page-number {
         min-width: density.$clr-base-icon-size-s;
       }
+
+      .clr-wizard-stepnav-link-page-number {
+        text-align: center;
+      }
     }
 
     .clr-wizard-title {
