feat(vertical-nav): fix for vertical offsets

--- a/projects/angular/src/layout/vertical-nav/_properties.vertical-nav.scss
+++ b/projects/angular/src/layout/vertical-nav/_properties.vertical-nav.scss
@@ -30,7 +30,7 @@
         #{density.$clr-base-gap-xs} + #{density.$clr-base-horizontal-offset-m}
       ) #{density.$clr-base-vertical-offset-m}
       calc(#{vertical-nav-variables.$clr-vertical-nav-icon-size} + #{density.$clr-base-horizontal-offset-xl});
-    --clr-vertical-nav-item-height: #{density.$clr-base-layout-space-xl};
+    --clr-vertical-nav-item-height: #{density.$clr-base-row-height-m};
     --clr-vertical-nav-min-width: #{density.$clr-base-layout-space-3xl};
     --clr-vertical-nav-item-active-font-weight: #{tokens.$cds-global-typography-font-weight-semibold};
 
@@ -58,6 +58,6 @@
 
     // Vertical Nav - Header
     --clr-vertical-nav-header-font-weight: #{tokens.$cds-global-typography-font-weight-semibold};
-    --clr-vertical-nav-header-padding: #{mixins.baselinePx(10)} #{density.$clr-base-horizontal-offset-xl};
+    --clr-vertical-nav-header-padding: #{density.$clr-base-vertical-offset-multi-row-m} #{density.$clr-base-horizontal-offset-xl};
   }
 }
