--- a/projects/angular/src/layout/vertical-nav/_properties.vertical-nav.scss
+++ b/projects/angular/src/layout/vertical-nav/_properties.vertical-nav.scss
@@ -54,7 +54,7 @@
     --clr-vertical-nav-toggle-icon-disabled-color: #{tokens.$cds-alias-object-interaction-color-disabled};
     --clr-vertical-nav-toggle-button-size: #{density.$clr-base-row-height-m};
     --clr-vertical-nav-trigger-divider-border-color: #{tokens.$cds-alias-object-border-color}; // var(--clr-color-neutral-400);
-    --clr-vertical-nav-trigger-divider-border-width: #{density.$clr-base-layout-space-4xs};
+    --clr-vertical-nav-trigger-divider-border-width: #{variables.$clr-global-borderwidth};
 
     // Vertical Nav - Header
     --clr-vertical-nav-header-font-weight: #{tokens.$cds-global-typography-font-weight-semibold};
