--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -253,6 +253,12 @@ $typography-tokens: (
     line-height: #{density.$clr-base-typography-line-height-24},
     letter-spacing: #{baselinePx(-0.2)},
   ),
+  'SUBSECTION-16-SB': (
+    font-size: #{density.$clr-base-typography-font-size-sub-section},
+    font-weight: #{tokens.$cds-global-typography-font-weight-semibold},
+    line-height: #{density.$clr-base-typography-line-height-24},
+    letter-spacing: #{baselinePx(-0.2)},
+  ),
   'MESSAGE-16-EXP': (
     // H6, Heading
     font-size: #{density.$clr-base-typography-font-size-sub-section},
