feat(wizard): update footer gap and add missing density tokens

--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -308,7 +308,7 @@
       flex-direction: row;
       flex-wrap: nowrap;
       justify-content: flex-end;
-      gap: tokens.$cds-global-space-7;
+      gap: density.$clr-base-gap-l;
     }
 
     .clr-wizard-btn-wrapper {
