--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -68,6 +68,8 @@ $clr-base-dg-compact-row-height: var(--clr-base-dg-compact-row-height);
 $clr-base-gap-xs: var(--clr-base-gap-xs);
 $clr-base-gap-s: var(--clr-base-gap-s);
 $clr-base-gap-m: var(--clr-base-gap-m);
+$clr-base-gap-l: var(--clr-base-gap-l);
+$clr-base-gap-xl: var(--clr-base-gap-xl);
 
 $clr-base-icon-size-xs: var(--clr-base-icon-size-xs);
 $clr-base-icon-size-s: var(--clr-base-icon-size-s);
